--- a/myproj/Jenkinsfile
+++ b/myproj/Jenkinsfile
@@ -1,17 +1,46 @@
-// Simple Jenkins pipeline for PHP linting
 pipeline {
-  agent any
-  stages {
-    stage('PHP lint') {
-      steps {
-        // This runs the CI helper PHP script which lints PHP files
-        sh 'php tests/ci.php'
-      }
+    agent any
+
+    environment {
+        PHP = 'C:\\xampp\\php\\php.exe'      // PHP executable
+        XAMPP_PATH = 'C:\\xampp'             // XAMPP root folder
+        HTDOCS_PATH = 'C:\\xampp\\htdocs\\projectEngineering\\TicketMasterOld' // Deployment folder
     }
-  }
-  post {
-    always {
-      archiveArtifacts allowEmptyArchive: true, artifacts: 'tests/ci-output.txt'
+
+    stages {
+        stage('Checkout Code') {
+            steps {
+                echo "Checking out code from GitHub..."
+                git branch: 'main', url: 'https://github.com/veronica-tes06/TicketMasterOld.git'
+            }
+        }
+
+        stage('Test') {
+            steps {
+                echo "Starting XAMPP (Apache + MySQL)..."
+                bat "${XAMPP_PATH}\\xampp_start.exe"
+
+                echo "Running PHPUnit tests..."
+                bat "\"${PHP}\" vendor\\bin\\phpunit --configuration phpunit.xml"
+            }
+        }
+
+        stage('Deploy') {
+            steps {
+                echo "Deploying PHP application to htdocs..."
+                bat "xcopy /Y /E * ${HTDOCS_PATH}\\"
+            }
+        }
     }
-  }
+
+    post {
+        success {
+            echo "Pipeline completed successfully!"
+            bat "${XAMPP_PATH}\\xampp_stop.exe"
+        }
+        failure {
+            echo "Pipeline failed!"
+            bat "${XAMPP_PATH}\\xampp_stop.exe"
+        }
+    }
 }
